add firebase authenticate

--- a/src/app/shared/user-row/user-row.component.html
+++ b/src/app/shared/user-row/user-row.component.html
@@ -2,4 +2,6 @@
     <li>Login</li>
     <li>Google</li>
     <li>Facebook</li>
+    <li><a [routerLink]="['/product']">Product</a></li>
+    <li><a [routerLink]="['/']">Home</a></li>
 </ul>
