--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<router-outlet name="userrow"></router-outlet>
 <router-outlet></router-outlet>
