add feature routing, add products and orders module structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<router-outlet name="userrow"></router-outlet>
+<ul><li><a [routerLink] = "['/products']">Products</a></li>
+    <li><a [routerLink]="['/orders']">Orders</a></li>
+    <li><a [routerLink]="['']">Home</a></li>
+</ul>
 <router-outlet></router-outlet>
