improve routing, add action link to product list

--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -1,3 +1,6 @@
+     
+   <a mat-flat-button color="warn" [routerLink]="['/products', 0, 'edit']">New Product</a>
+   <p></p>
      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       
         <!-- Position Column -->
@@ -9,7 +12,8 @@
         <!-- Name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          <td mat-cell *matCellDef="let element">
+            <a [routerLink] = "['/products', element.position]">{{element.name}}</a></td>
         </ng-container>
       
         <!-- Weight Column -->
@@ -23,7 +27,15 @@
           <th mat-header-cell *matHeaderCellDef> Symbol </th>
           <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
         </ng-container>
-      
+        
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+              <a mat-stroked-button color="primary" [routerLink]="['/products', element.position, 'edit']">Edit</a>
+              <a mat-stroked-button color="warn" routerLink="." (click)="delete(element.position)">Delete</a>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
