--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -4,35 +4,68 @@
      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       
         <!-- Position Column -->
-        <ng-container matColumnDef="position">
+        <ng-container matColumnDef="productId">
           <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
         </ng-container>
       
         <!-- Name Column -->
-        <ng-container matColumnDef="name">
+        <ng-container matColumnDef="productName">
           <th mat-header-cell *matHeaderCellDef> Name </th>
           <td mat-cell *matCellDef="let element">
-            <a [routerLink] = "['/products', element.position]">{{element.name}}</a></td>
+            <a [routerLink] = "['/products', element.productId]">{{element.productName}}</a></td>
         </ng-container>
       
         <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef> Weight </th>
-          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        <ng-container matColumnDef="productCode">
+          <th mat-header-cell *matHeaderCellDef> productCode </th>
+          <td mat-cell *matCellDef="let element"> {{element.productCode}} </td>
         </ng-container>
       
         <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef> Symbol </th>
-          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef> category </th>
+          <td mat-cell *matCellDef="let element"> {{element.category}} </td>
         </ng-container>
         
+        <ng-container matColumnDef="tags">
+          <th mat-header-cell *matHeaderCellDef> tags </th>
+          <td mat-cell *matCellDef="let element"> {{element.tags}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="price">
+          <th mat-header-cell *matHeaderCellDef> price </th>
+          <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef> description </th>
+          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="releaseDate">
+          <th mat-header-cell *matHeaderCellDef> releaseDate </th>
+          <td mat-cell *matCellDef="let element"> {{element.releaseDate}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="imageUrl">
+          <th mat-header-cell *matHeaderCellDef> imageUrl </th>
+          <td mat-cell *matCellDef="let element"> {{element.imageUrl}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="starRating">
+          <th mat-header-cell *matHeaderCellDef> starRating </th>
+          <td mat-cell *matCellDef="let element"> {{element.starRating}} </td>
+        </ng-container>
+        <ng-container matColumnDef="stock">
+          <th mat-header-cell *matHeaderCellDef> stock </th>
+          <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
+        </ng-container>
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element">
-              <a mat-stroked-button color="primary" [routerLink]="['/products', element.position, 'edit']">Edit</a>
-              <a mat-stroked-button color="warn" routerLink="." (click)="delete(element.position)">Delete</a>
+              <a mat-stroked-button color="primary" [routerLink]="['/products', element.productId, 'edit']">Edit</a>
+              <a mat-stroked-button color="warn" routerLink="." (click)="delete(element.productId)">Delete</a>
             </td>
         </ng-container>
 
