--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -2,70 +2,60 @@
    <a mat-flat-button color="warn" [routerLink]="['/products', 0, 'edit']">New Product</a>
    <p></p>
      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      
-        <!-- Position Column -->
-        <ng-container matColumnDef="productId">
-          <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
-        </ng-container>
-      
-        <!-- Name Column -->
         <ng-container matColumnDef="productName">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <th mat-header-cell *matHeaderCellDef>{{productTexts.productName}} </th>
           <td mat-cell *matCellDef="let element">
-            <a [routerLink] = "['/products', element.productId]">{{element.productName}}</a></td>
+            <a [routerLink] = "['/products', element.productCode]">{{element.productName}}</a></td>
         </ng-container>
       
-        <!-- Weight Column -->
         <ng-container matColumnDef="productCode">
-          <th mat-header-cell *matHeaderCellDef> productCode </th>
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.productCode}} </th>
           <td mat-cell *matCellDef="let element"> {{element.productCode}} </td>
         </ng-container>
       
-        <!-- Symbol Column -->
         <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef> category </th>
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.category}} </th>
           <td mat-cell *matCellDef="let element"> {{element.category}} </td>
         </ng-container>
         
         <ng-container matColumnDef="tags">
-          <th mat-header-cell *matHeaderCellDef> tags </th>
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.tags }}</th>
           <td mat-cell *matCellDef="let element"> {{element.tags}} </td>
         </ng-container>
 
         <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef> price </th>
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.price}} </th>
           <td mat-cell *matCellDef="let element"> {{element.price}} </td>
         </ng-container>
 
         <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef> description </th>
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.description} </th>
           <td mat-cell *matCellDef="let element"> {{element.description}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="releaseDate">
-          <th mat-header-cell *matHeaderCellDef> releaseDate </th>
-          <td mat-cell *matCellDef="let element"> {{element.releaseDate}} </td>
+        <ng-container matColumnDef="availableDate">
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.availableDate}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.availableDate}} </td>
         </ng-container>
 
         <ng-container matColumnDef="imageUrl">
-          <th mat-header-cell *matHeaderCellDef> imageUrl </th>
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.imageUrl}} </th>
           <td mat-cell *matCellDef="let element"> {{element.imageUrl}} </td>
         </ng-container>
 
         <ng-container matColumnDef="starRating">
-          <th mat-header-cell *matHeaderCellDef> starRating </th>
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.starRating}} </th>
           <td mat-cell *matCellDef="let element"> {{element.starRating}} </td>
         </ng-container>
-        <ng-container matColumnDef="stock">
-          <th mat-header-cell *matHeaderCellDef> stock </th>
-          <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
+        <ng-container matColumnDef="inventory">
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.inventory}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.inventory}} </td>
         </ng-container>
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element">
-              <a mat-stroked-button color="primary" [routerLink]="['/products', element.productId, 'edit']">Edit</a>
-              <a mat-stroked-button color="warn" routerLink="." (click)="delete(element.productId)">Delete</a>
+              <a mat-stroked-button color="primary" [routerLink]="['/products', element.productCode, 'edit']">Edit</a>
+              <a mat-stroked-button color="warn" routerLink="." (click)="delete(element.productCode)">Delete</a>
             </td>
         </ng-container>
 
