half way edit product

--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -29,7 +29,7 @@
         </ng-container>
 
         <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef> {{productTexts.description} </th>
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.description}} </th>
           <td mat-cell *matCellDef="let element"> {{element.description}} </td>
         </ng-container>
 
