--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<ul><li><a [routerLink] = "['/products']">Products</a></li>
-    <li><a [routerLink]="['/orders']">Orders</a></li>
-    <li><a [routerLink]="['']">Home</a></li>
-</ul>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+            <mat-button-toggle [routerLink] = "['/products']">Product</mat-button-toggle>
+            <mat-button-toggle [routerLink]="['/orders']">Order</mat-button-toggle>
+            <mat-button-toggle [routerLink]="['']">Home</mat-button-toggle>
+          </mat-button-toggle-group>
+    </mat-toolbar-row>
+  </mat-toolbar>
+  <br>
 <router-outlet></router-outlet>
