--- a/src/app/inside/products/product-edit/product-edit.component.css
+++ b/src/app/inside/products/product-edit/product-edit.component.css
@@ -1,9 +1,30 @@
 .example-form {
     min-width: 150px;
-    max-width: 500px;
+    max-width: 100%;
     width: 100%;
   }
   
   .example-full-width {
     width: 100%;
+  }
+
+  .example-container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .example-container > * {
+    width: 100%;
+  }
+  
+  .example-container form {
+    margin-bottom: 20px;
+  }
+  
+  .example-container form > * {
+    margin: 5px 0;
+  }
+  
+  .example-container .mat-radio-button {
+    margin: 0 12px;
   }
