--- a/src/app/inside/orders/order-edit/order-edit.component.html
+++ b/src/app/inside/orders/order-edit/order-edit.component.html
@@ -1,12 +1,42 @@
-<form class="example-form" [formGroup]="orderForm" (ngSubmit)="onSubmit()">  
-  <mat-form-field class="order-full-width" [floatLabel]="always">
-    <input matInput placeholder="Bàn số" formControlName="table" >
+<form class="order-form" [formGroup]="orderForm" (ngSubmit)="onSubmit()">  
+  <mat-form-field class="order-full-width" appearance="outline">
+    <mat-label>Bàn số</mat-label>
+    <input matInput placeholder="" formControlName="table" >
   </mat-form-field>
-  <mat-form-field class="order-full-width"  [floatLabel]="always">
-    <input matInput placeholder="Số người" formControlName="pax">
+  <mat-form-field class="order-full-width"  [floatLabel]="always" appearance="outline">
+      <mat-label>Số người</mat-label>
+    <input matInput placeholder="" formControlName="pax">
   </mat-form-field>
-  
-  <button mat-raised-button color="primary" type="submit" [disabled]="!orderForm.valid">Lưu SP</button>
+    <div formArrayName="items" *ngFor="let item of items.controls, let i=index">
+      <div [formGroupName]="i">
+      <mat-form-field class="order-50-width" appearance="outline">
+        <mat-label>Bia</mat-label>
+        <input matInput placeholder="" formControlName="productName">
+      </mat-form-field>
+      <mat-form-field class="order-25-width" appearance="outline">
+          <mat-label>Giá</mat-label>
+          <input matInput placeholder="" formControlName="price">
+        </mat-form-field>
+        <mat-form-field class="order-25-width" appearance="outline">
+            <mat-label>Số lượng</mat-label>
+            <input matInput placeholder="" formControlName="quantity">
+          </mat-form-field>
+      </div>
+      <hr>
+    </div>    
+    <button mat-raised-button color="basic" (click)="addItem()" type="button">Thêm bia</button>
+    <mat-form-field class="order-full-width" appearance="outline">
+        <mat-label>Thành tiền</mat-label>
+        <input matInput placeholder="" formControlName="total" value="{{total}}" >
+      </mat-form-field>
+<br><p></p>
+<button mat-raised-button color="primary" type="submit" [disabled]="!orderForm.valid">Lưu SP</button>
   <button mat-raised-button color="basic" [routerLink]="['/products']">Quay về</button>
-</form>  
+</form> 
+
+<br>Dirty: {{ orderForm.dirty }}
+<br>Touched: {{ orderForm.touched }}
+<br>Valid: {{ orderForm.valid }}
+<br>Value: {{ orderForm.value | json }}
+<br>Street: {{ orderForm.get('0.street1')?.value }}
 
