--- a/src/app/inside/products/product-edit/product-edit.component.html
+++ b/src/app/inside/products/product-edit/product-edit.component.html
@@ -1,37 +1,47 @@
 <form class="example-form" [formGroup]="productForm" (ngSubmit)="onSubmit()">
   
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="{{productTexts.productName}}" formControlName="productName">
+  <mat-form-field class="example-full-width" appearance="outline">
+      <mat-label>{{productTexts.productName}}</mat-label>
+    <input matInput formControlName="productName">
     <mat-error *ngIf="productName.invalid">{{getErrorMessage()}}</mat-error>   
   </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="{{productTexts.productCode}}" formControlName="productCode">
+  <mat-form-field class="example-full-width" appearance="outline">
+      <mat-label>{{productTexts.productCode}}</mat-label>
+    <input matInput  formControlName="productCode">
   </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="{{productTexts.category}}" formControlName="category">
+  <mat-form-field class="example-full-width" appearance="outline">
+      <mat-label>{{productTexts.category}}</mat-label>
+    <input matInput  formControlName="category">
   </mat-form-field>  
-  <mat-form-field class="example-full-width">    
-    <input matInput [matDatepicker]="picker" placeholder="{{productTexts.availableDate}}" formControlName="availableDate">
+  <mat-form-field class="example-full-width" appearance="outline">  
+      <mat-label>{{productTexts.availableDate}}</mat-label>  
+    <input matInput [matDatepicker]="picker"  formControlName="availableDate">
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="{{productTexts.price}}" formControlName="price">
+  <mat-form-field class="example-full-width" appearance="outline">
+      <mat-label>{{productTexts.price}}</mat-label>
+    <input matInput formControlName="price">
   </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="{{productTexts.starRating}}" formControlName="starRating">
+  <mat-form-field class="example-full-width" appearance="outline">
+      <mat-label>{{productTexts.starRating}}</mat-label>
+    <input matInput  formControlName="starRating">
   </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="{{productTexts.imageUrl}}" formControlName="imageUrl">
+  <mat-form-field class="example-full-width" appearance="outline">
+      <mat-label>{{productTexts.imageUrl}}</mat-label>
+    <input matInput  formControlName="imageUrl">
   </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="{{productTexts.inventory}}" formControlName="inventory">
+  <mat-form-field class="example-full-width" appearance="outline">
+      <mat-label>{{productTexts.inventory}}</mat-label>
+    <input matInput  formControlName="inventory">
   </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <textarea matInput placeholder="{{productTexts.description}}" formControlName="description"></textarea>
+  <mat-form-field class="example-full-width" appearance="outline">
+      <mat-label>{{productTexts.description}}</mat-label>
+    <textarea matInput  formControlName="description"></textarea>
   </mat-form-field>
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="tag" formControlName="tags">
+  <mat-form-field class="example-full-width" appearance="outline">
+      <mat-label>tag</mat-label>
+    <input matInput  formControlName="tags">
   </mat-form-field>
   <button mat-raised-button color="primary" type="submit" [disabled]="!productForm.valid">Lưu SP</button>
   <button mat-raised-button color="basic" [routerLink]="['/products']">Quay về</button>
