--- a/src/app/inside/orders/order-edit/order-edit.component.html
+++ b/src/app/inside/orders/order-edit/order-edit.component.html
@@ -11,7 +11,12 @@
       <div [formGroupName]="i">
       <mat-form-field class="order-50-width" appearance="outline">
         <mat-label>Bia</mat-label>
-        <input matInput placeholder="" formControlName="productName">
+        <input type="text" matInput placeholder="" formControlName="productName" [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete" >
+          <mat-option *ngFor="let option of filteredOption" [value]="option">
+            {{option}}
+          </mat-option>
+        </mat-autocomplete>
       </mat-form-field>
       <mat-form-field class="order-25-width" appearance="outline">
           <mat-label>Giá</mat-label>
