--- a/src/app/inside/orders/order-edit/order-edit.component.html
+++ b/src/app/inside/orders/order-edit/order-edit.component.html
@@ -12,8 +12,8 @@
       <mat-form-field class="order-50-width" appearance="outline">
         <mat-label>Bia</mat-label>
         <input type="text" matInput placeholder="" formControlName="productName" [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete" >
-          <mat-option *ngFor="let option of filteredProducts" [value]="option.productCode">
+        <mat-autocomplete #auto="matAutocomplete" (optionSelected)='itemSelected($event)'>
+          <mat-option *ngFor="let option of filteredProducts" [value]="option.productCode" >
             {{option.productName}}
           </mat-option>
         </mat-autocomplete>
