restructure application to easier manage public web and inside admin application

--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -1,5 +1,4 @@
-     
-   
+<app-menu-bar></app-menu-bar>
    <a mat-flat-button color="warn" [routerLink]="['/products', 0, 'edit']">New Product</a>
    <p></p>
      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
