--- a/src/app/inside/orders/order-edit/order-edit.component.html
+++ b/src/app/inside/orders/order-edit/order-edit.component.html
@@ -1,3 +1,4 @@
+
 <form class="order-form" [formGroup]="orderForm" (ngSubmit)="onSubmit()">  
   <mat-form-field class="order-full-width" appearance="outline">
     <mat-label>Bàn số</mat-label>
@@ -12,8 +13,8 @@
       <mat-form-field class="order-50-width" appearance="outline">
         <mat-label>Bia</mat-label>
         <input type="text" matInput placeholder="" formControlName="productName" [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="itemSelected($event, i)" [displayWith] = "displayProductFn" >
-          <mat-option *ngFor="let option of products" [value]="option.productCode" >
+        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="itemSelected($event, i)" >
+          <mat-option *ngFor="let option of (filteredProducts|async)" [value]="option.productCode" >
             {{option.productName}}
           </mat-option>
         </mat-autocomplete>
