--- a/src/app/inside/products/product-edit/product-edit.component.html
+++ b/src/app/inside/products/product-edit/product-edit.component.html
@@ -1,3 +1,4 @@
+<app-menu-bar></app-menu-bar>
 <form class="example-form" [formGroup]="productForm" (ngSubmit)="onSubmit()">
   
   <mat-form-field class="example-full-width" appearance="outline">
