--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -1,11 +1,11 @@
-<app-menu-bar></app-menu-bar>
-   <a mat-flat-button color="warn" [routerLink]="['/products', 0, 'edit']">New Product</a>
+   
+  <a mat-flat-button color="warn" [routerLink]="['/products', 0, 'edit']">New Product</a>
    <p></p>
      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <ng-container matColumnDef="productName">
           <th mat-header-cell *matHeaderCellDef>{{productTexts.productName}} </th>
           <td mat-cell *matCellDef="let element">
-            <a [routerLink] = "['/products', element.productCode]">{{element.productName}}</a></td>
+            <a [routerLink] = "['/inside/products', element.productCode]">{{element.productName}}</a></td>
         </ng-container>
       
         <ng-container matColumnDef="productCode">
@@ -54,7 +54,7 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element">
-              <a mat-stroked-button color="primary" [routerLink]="['/products', element.productCode, 'edit']">Edit</a>
+              <a mat-stroked-button color="primary" [routerLink]="['/inside/products', element.productCode, 'edit']">Edit</a>
               <a mat-stroked-button color="warn" routerLink="." (click)="delete(element.productCode)">Delete</a>
             </td>
         </ng-container>
