--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -1,7 +1,8 @@
    
-  <a mat-flat-button color="warn" [routerLink]="['/products', 0, 'edit']">New Product</a>
+  <a mat-flat-button color="warn" [routerLink]="['/inside/products', 0, 'edit']">New Product</a>
    <p></p>
      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+       <!-- ProductName Column -->
         <ng-container matColumnDef="productName">
           <th mat-header-cell *matHeaderCellDef>{{productTexts.productName}} </th>
           <td mat-cell *matCellDef="let element">
@@ -58,10 +59,11 @@
               <a mat-stroked-button color="warn" routerLink="." (click)="delete(element.productCode)">Delete</a>
             </td>
         </ng-container>
-
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        
       </table>
+      <mat-paginator [pageSizeOptions]="[20, 5, 10]" showFirstLastButtons></mat-paginator>
 
 
       
