--- a/src/app/public/user-row/user-row.component.html
+++ b/src/app/public/user-row/user-row.component.html
@@ -2,6 +2,6 @@
     <li>Login</li>
     <li>Google</li>
     <li>Facebook</li>
-    <li><a [routerLink]="['/products']">inside</a></li>
+    <li><a [routerLink]="['/inside/products']">inside</a></li>
     <li><a [routerLink]="['/']">Home</a></li>
 </ul>
