fix order autocomplete and add public layout components

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,2 +1,6 @@
 <user-row></user-row>
+<side-navbar></side-navbar>
+<app-menu-bar></app-menu-bar>
+<app-products></app-products>
+<app-footer></app-footer>
 home work
