--- a/src/app/inside/orders/order-edit/order-edit.component.html
+++ b/src/app/inside/orders/order-edit/order-edit.component.html
@@ -11,9 +11,9 @@
       <div [formGroupName]="i">
       <mat-form-field class="order-50-width" appearance="outline">
         <mat-label>Bia</mat-label>
-        <input type="text" matInput placeholder="" formControlName="productName" [matAutocomplete]="auto">
+        <input type="text" matInput placeholder="" formControlName="product" [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete" (optionSelected)="itemSelected($event, i)" [displayWith]="displayProductFn">
-          <mat-option *ngFor="let option of products " [value]="option" >
+          <mat-option *ngFor="let option of (filteredProducts | async) " [value]="option" >
             {{option.productName}}
           </mat-option>
         </mat-autocomplete>
