add logo and some styling

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,6 +1,30 @@
-<user-row></user-row>
-<side-navbar></side-navbar>
-<app-menu-bar></app-menu-bar>
-<app-products></app-products>
-<app-footer></app-footer>
-home work
+
+<!-- <side-navbar></side-navbar> -->
+<!-- Main Content -->
+<main>
+    <!-- Header -->
+    <header class="header">
+        <user-row></user-row>
+    </header>
+
+    <!-- Hero -->
+    <section>
+        
+    </section>
+
+    <!-- Content -->
+    <section class="content">
+        <app-products></app-products>
+    </section>
+
+    <!-- Sidebar -->
+    <aside class="sidebar">
+        <app-menu-bar></app-menu-bar>
+    </aside>
+    
+    <!-- Footer -->
+    <footer class="footer">
+        <app-footer></app-footer>
+    </footer>
+
+</main>
