--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,30 +1,7 @@
 
-<!-- <side-navbar></side-navbar> -->
-<!-- Main Content -->
-<main>
-    <!-- Header -->
-    <header class="header">
-        <user-row></user-row>
-    </header>
-
-    <!-- Hero -->
-    <section>
-        
-    </section>
-
-    <!-- Content -->
-    <section class="content">
-        <app-products></app-products>
-    </section>
-
-    <!-- Sidebar -->
-    <aside class="sidebar">
-        <app-menu-bar></app-menu-bar>
-    </aside>
-    
-    <!-- Footer -->
-    <footer class="footer">
-        <app-footer></app-footer>
-    </footer>
-
-</main>
+<div class="hkb-container">
+    <div class="hkb-header"><user-row></user-row></div>
+    <div class="hkb-side-bar"><app-menu-bar></app-menu-bar></div>
+    <div class="hkb-content"><app-products></app-products></div>
+    <div class="hkb-footer"><app-footer></app-footer></div>
+</div>
