--- a/src/app/public/user-row/user-row.component.html
+++ b/src/app/public/user-row/user-row.component.html
@@ -1,10 +1,12 @@
 <div class="logo">
     <img src="assets/img/logo.png" />
 </div>
-<ul>
-    <li>Login</li>
-    <li>Google</li>
-    <li>Facebook</li>
-    <li><a [routerLink]="['/inside/products']">inside</a></li>
-    <li><a [routerLink]="['/']">Home</a></li>
-</ul>
+<div class="menu-links">
+    <ul>
+        <li>who</li>
+        <li>drink</li>
+        <li>contact</li>
+        <li><a [routerLink]="['/inside/products']">inside</a></li>
+        <li><a [routerLink]="['/']">Home</a></li>
+    </ul>
+</div>
