--- a/src/app/public/home/home.component.css
+++ b/src/app/public/home/home.component.css
@@ -1,3 +1,577 @@
+/**
+ * Copyright 2015 Google Inc. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+ body {
+    margin: 0;
+  }
+
+  .mdl-layout__header-row {
+    background: linear-gradient(to top,  #7c0a02 0%, #7c0a02 42%,white 42%);  
+    height: 210px;
+  }
+  
+  /* Disable ugly boxes around images in IE10 */
+  a img{
+    border: 0px;
+  }
+  
+  ::-moz-selection {
+    background-color: #355438;
+    color: #fff;
+  }
+  
+  ::selection {
+    background-color: #355438;
+    color: #fff;
+  }
+  
+  .hakabeer-search-box .mdl-textfield__input {
+    color: rgba(0, 0, 0, 0.87);
+  }
+  
+  .hakabeer-header .mdl-menu__container {
+    z-index: 50;
+    margin: 0 !important;
+  }
+  
+  
+  .mdl-textfield--expandable {
+    width: auto;
+  }
+  
+  .hakabeer-fab {
+    position: absolute;
+    right: 20%;
+    bottom: -26px;
+    z-index: 3;
+    background: #64ffda !important;
+    color: black !important;
+  }
+  
+  .hakabeer-mobile-title {
+    display: none !important;
+  }
+  
+  
+  .hakabeer-logo-image {
+    height: 180px;
+    width: 278px;
+  }
+
+  .hakabeer-logo-image-mobile {
+    height: 90px;
+    width: 137px;
+  }
+  
+  
+  .hakabeer-header {
+    overflow: visible;
+    background-color: white;
+   }
+  
+    .hakabeer-header .material-icons {
+      color: #767777 !important;
+    }
+  
+    .hakabeer-header .mdl-layout__drawer-button {
+      background: transparent;
+      color: #777676;
+      
+    }
+  
+    .hakabeer-header .mdl-navigation__link {
+      color: #7c0a02;
+      font-weight: 700;
+      font-size: 24px;
+      font-family: Roboto,sans-serif
+    }
+  
+    .hakabeer-navigation-container {
+      /* Simple hack to make the overflow happen to the left instead... */
+      direction: rtl;
+      -webkit-order: 1;
+          -ms-flex-order: 1;
+              order: 1;
+      width: 500px;
+      transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1),
+          width 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  
+    .hakabeer-navigation {
+      /* ... and now make sure the content is actually LTR */
+      direction: ltr;
+      -webkit-justify-content: flex-end;
+          -ms-flex-pack: end;
+              justify-content: flex-end;
+      width: 800px;
+    }
+  
+    .hakabeer-search-box.is-focused + .hakabeer-navigation-container {
+      opacity: 0;
+      width: 100px;
+    }
+  
+  
+    .hakabeer-navigation .mdl-navigation__link {
+      display: inline-block;
+      height: 60px;
+      line-height: 68px;
+      background-color: transparent !important;
+      border-bottom: 4px solid transparent;
+    }
+  
+      .hakabeer-navigation .mdl-navigation__link:hover {
+        border-bottom: 4px solid #8bc34a;
+      }
+  
+    .hakabeer-search-box {
+      -webkit-order: 2;
+          -ms-flex-order: 2;
+              order: 2;
+      margin-left: 16px;
+      margin-right: 16px;
+    }
+  
+    .hakabeer-more-button {
+      -webkit-order: 3;
+          -ms-flex-order: 3;
+              order: 3;
+    }
+  
+  
+  .hakabeer-drawer {
+    border-right: none;
+  }
+  
+    .hakabeer-drawer-separator {
+      height: 1px;
+      background-color: #dcdcdc;
+      margin: 8px 0;
+    }
+  
+    .hakabeer-drawer .mdl-navigation__link.mdl-navigation__link {
+      font-size: 14px;
+      color: #757575;
+    }
+  
+    .hakabeer-drawer span.mdl-navigation__link.mdl-navigation__link {
+      color: #8bc34a;
+    }
+  
+    .hakabeer-drawer .mdl-layout-title {
+      position: relative;
+      background: #7c0a02;
+      color: white;
+      font-size: 24px;
+      line-height: 200px;
+      padding-left: 12px;
+    }
+  
+      .hakabeer-drawer .hakabeer-logo-image {
+        position: absolute;
+        bottom: 16px;
+      }
+  
+  .hakabeer-be-together-section {
+    position: relative;
+    height: 800px;
+    width: auto;
+    background-color: #f3f3f3;
+    background-image: url("/assets/img/hero-banner.jpg");
+    background-size: cover;
+  }
+
+  .mdl-typography--font-light{
+      color: #355438
+  }
+  
+  .logo-font {
+    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+    line-height: 5;
+    color: #767777;
+    font-weight: 500;
+  }
+  
+  .hakabeer-slogan {      
+    font-size: 60px;
+    color: white;
+  }
+  
+  .hakabeer-sub-slogan {
+    font-size: 41px;
+    color: white;
+  }
+
+  .hakabeer-title{
+      color:white;
+      line-height: 300px;
+      font-size: 40px;
+      text-transform: uppercase;
+      
+  }
+  .hakabeer-station-text{
+      color: white;
+      font-size: 40px;
+      font-family: 'Courier New', Courier, monospace;
+  }
+  
+  .hakabeer-create-character {
+    font-size: 21px;
+    padding-top: 400px;
+  }
+  
+    .hakabeer-create-character a {
+      text-decoration: none;
+      color: #767777;
+      font-weight: 300;
+    }
+  
+  .hakabeer-screen-section {
+    position: relative;
+    padding-top: 60px;
+    padding-bottom: 80px;
+  }
+  
+  .hakabeer-screens {
+    text-align: right;
+    width: 100%;
+    white-space: nowrap;
+    overflow-x: auto;
+  }
+  
+  .hakabeer-screen {
+    text-align: center;
+  }
+  
+  .hakabeer-screen .hakabeer-link {
+    margin-top: 16px;
+    display: block;
+    z-index: 2;
+  }
+  
+  .hakabeer-image-link {
+    text-decoration: none;
+  }
+  
+  .hakabeer-wear {
+    display: inline-block;
+    width: 160px;
+    margin-right: 32px;
+  }
+  
+    .hakabeer-wear .hakabeer-screen-image {
+      width: 40%;
+      z-index: 1;
+    }
+  
+  
+  .hakabeer-phone {
+    display: inline-block;
+    width: 64px;
+    margin-right: 48px;
+  }
+  
+    .hakabeer-phone .hakabeer-screen-image {
+      width: 100%;
+      z-index: 1;
+    }
+  
+  
+  .hakabeer-tablet {
+    display: inline-block;
+    width: 110px;
+    margin-right: 64px;
+  }
+  
+    .hakabeer-tablet .hakabeer-screen-image {
+      width: 100%;
+      z-index: 1;
+    }
+  
+    .hakabeer-tablet .hakabeer-link {
+      display: block;
+      z-index: 2;
+    }
+  
+  
+  .hakabeer-tv {
+    display: inline-block;
+    width: 300px;
+    margin-right: 80px;
+  }
+  
+    .hakabeer-tv .hakabeer-screen-image {
+      width: 100%;
+      z-index: 1;
+    }
+  
+  
+  .hakabeer-auto {
+    display: inline-block;
+    width: 300px;
+    overflow: hidden;
+  }
+  
+    .hakabeer-auto .hakabeer-screen-image {
+      display: block;
+      height: 300px;
+      z-index: 1;
+    }
+  
+  
+  .hakabeer-wear-section {
+    position: relative;
+    background-size: cover;
+    height: 800px;
+  }
+  
+  .hakabeer-wear-band {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: #37474f;
+  }
+  
+  .hakabeer-wear-band-text {
+    max-width: 800px;
+    margin-left: 25%;
+    padding: 24px;
+    text-align: left;
+    color: white;
+  }
+  
+    .hakabeer-wear-band-text p {
+      padding-top: 8px;
+    }
+  
+  .hakabeer-link {
+    text-decoration: none;
+    color: #8bc34a !important;
+  }
+  
+    .hakabeer-link:hover {
+      color: #7cb342 !important;
+    }
+  
+    .hakabeer-link .material-icons {
+      position: relative;
+      top: -1px;
+      vertical-align: middle;
+    }
+  
+  .hakabeer-alt-link {
+    text-decoration: none;
+    color: #64ffda !important;
+    font-size: 16px;
+  }
+  
+    .hakabeer-alt-link:hover {
+      color: #00bfa5 !important;
+    }
+  
+    .hakabeer-alt-link .material-icons {
+      position: relative;
+      top: 6px;
+    }
+  
+  .hakabeer-customized-section {
+    text-align: center;
+  }
+  
+  .hakabeer-customized-section-text {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 80px 16px 0 16px;
+  }
+  
+    .hakabeer-customized-section-text p {
+      padding-top: 16px;
+    }
+  
+  .hakabeer-customized-section-image {
+    background-size: cover;
+    height: 400px;
+  }
+  
+  .hakabeer-more-section {
+    padding: 80px 0;
+    max-width: 1044px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+    .hakabeer-more-section .hakabeer-section-title {
+      margin-left: 12px;
+      padding-bottom: 24px;
+    }
+  
+  .hakabeer-card-container {
+  }
+  
+    .hakabeer-card-container .mdl-card__media {
+      overflow: hidden;
+      background: transparent;
+    }
+  
+      .hakabeer-card-container .mdl-card__media img {
+        width: 100%;
+      }
+  
+    .hakabeer-card-container .mdl-card__title {
+      background: transparent;
+      height: auto;
+    }
+  
+    .hakabeer-card-container .mdl-card__title-text {
+      color: black;
+      height: auto;
+    }
+  
+    .hakabeer-card-container .mdl-card__supporting-text {
+      height: auto;
+      color: black;
+      padding-bottom: 56px;
+    }
+  
+    .hakabeer-card-container .mdl-card__actions {
+      position: absolute;
+      bottom: 0;
+    }
+  
+    .hakabeer-card-container .mdl-card__actions a {
+      border-top: none;
+      font-size: 16px;
+    }
+  
+  .hakabeer-footer {
+    background-color: #fafafa;
+    position: relative;
+  }
+  
+    .hakabeer-footer a:hover {
+      color: #8bc34a;
+    }
+  
+    .hakabeer-footer .mdl-mega-footer--top-section::after {
+      border-bottom: none;
+    }
+  
+    .hakabeer-footer .mdl-mega-footer--middle-section::after {
+      border-bottom: none;
+    }
+  
+    .hakabeer-footer .mdl-mega-footer--bottom-section {
+      position: relative;
+    }
+  
+    .hakabeer-footer .mdl-mega-footer--bottom-section a {
+      margin-right: 2em;
+    }
+  
+    .hakabeer-footer .mdl-mega-footer--right-section a .material-icons {
+      position: relative;
+      top: 6px;
+    }
+  
+  
+  .hakabeer-link-menu:hover {
+    cursor: pointer;
+  }
+  
+  
+  /**** Mobile layout ****/
+  @media (max-width: 900px) {
+    .hakabeer-navigation-container {
+      display: none;
+    }
+  
+    .hakabeer-title {
+      display: none !important;
+    }
+  
+    .hakabeer-mobile-title {
+      display: block !important;
+      position: absolute;
+      left: calc(50% - 70px);
+      top: 12px;
+      transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  
+    /* WebViews in iOS 9 break the "~" operator, and WebViews in OS X 10.10 break
+       consecutive "+" operators in some cases. Therefore, we need to use both
+       here to cover all the bases. */
+    .hakabeer.hakabeer-search-box.is-focused ~ .hakabeer-mobile-title,
+    .hakabeer-search-box.is-focused + .hakabeer-navigation-container + .hakabeer-mobile-title {
+      opacity: 0;
+    }
+  
+    .hakabeer-more-button {
+      display: none;
+    }
+  
+    .hakabeer-search-box.is-focused {
+      width: calc(100% - 48px);
+    }
+  
+    .hakabeer-search-box .mdl-textfield__expandable-holder {
+      width: 100%;
+    }
+  
+    .hakabeer-be-together-section {
+      height: 350px;
+    }
+  
+    .hakabeer-slogan {      
+      font-size: 26px;
+      margin: 0 16px;
+      padding-top: 24px;
+    }
+  
+    .hakabeer-sub-slogan {
+      font-size: 16px;
+      margin: 0 16px;
+      padding-top: 8px;
+    }
+  
+    .hakabeer-create-character {
+      padding-top: 200px;
+      font-size: 16px;
+    }
+  
+    .hakabeer-create-character img {
+      height: 12px;
+    }
+  
+    .hakabeer-fab {
+      display: none;
+    }
+  
+    .hakabeer-wear-band-text {
+      margin-left: 0;
+      padding: 16px;
+    }
+  
+    .hakabeer-footer .mdl-mega-footer--bottom-section {
+      display: none;
+    }
+  }
+  
+
 .hkb-container{
     display: flex;
     flex-direction: row;
