--- a/src/app/inside/orders/order-edit/order-edit.component.css
+++ b/src/app/inside/orders/order-edit/order-edit.component.css
@@ -1,7 +1,7 @@
 .order-form {
     min-width: 150px;
-    max-width: 100%;
-    width: 100%;
+    max-width: 600px;
+    width: 100%;    
   }
   
   .order-full-width {
