--- a/src/app/inside/home/home.component.html
+++ b/src/app/inside/home/home.component.html
@@ -1,2 +1,5 @@
-<app-menu-bar></app-menu-bar>
-<router-outlet></router-outlet>
+<div class="inside-home-container">
+    <div class="inside-toolbar"><app-menu-bar></app-menu-bar></div>    
+    <div class="inside-content"><router-outlet></router-outlet></div>
+</div>
+
