--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -34,14 +34,34 @@
           <td mat-cell *matCellDef="let element"> {{element.description}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="availableDate">
-          <th mat-header-cell *matHeaderCellDef> {{productTexts.availableDate}} </th>
-          <td mat-cell *matCellDef="let element"> {{element.availableDate}} </td>
+        <ng-container matColumnDef="flavor">
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.flavor}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.flavor}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="odour">
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.odour}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.odour}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="color">
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.color}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.color}} </td>
         </ng-container>
 
         <ng-container matColumnDef="imageUrl">
           <th mat-header-cell *matHeaderCellDef> {{productTexts.imageUrl}} </th>
           <td mat-cell *matCellDef="let element"> {{element.imageUrl}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="abv">
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.abv}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.abv}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="ibu">
+          <th mat-header-cell *matHeaderCellDef> {{productTexts.ibu}} </th>
+          <td mat-cell *matCellDef="let element"> {{element.ibu}} </td>
         </ng-container>
 
         <ng-container matColumnDef="starRating">
