print and order update

--- a/src/app/inside/products/product-list.component.html
+++ b/src/app/inside/products/product-list.component.html
@@ -1,6 +1,6 @@
    
-  <a mat-flat-button color="warn" [routerLink]="['/inside/products', 0, 'edit']">New Product</a>
-   <p></p>
+  
+   <p><a mat-flat-button color="warn" [routerLink]="['/inside/products', 0, 'edit']">New Product</a></p>
      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
        <!-- ProductName Column -->
         <ng-container matColumnDef="productName">
