--- a/src/app/inside/orders/order-edit/order-edit.component.html
+++ b/src/app/inside/orders/order-edit/order-edit.component.html
@@ -1,13 +1,17 @@
 <form class="order-form" [formGroup]="orderForm" (ngSubmit)="onSubmit()">  
+  <mat-form-field class="order-full-width" appearance="outline">
+    <mat-label>Order ID</mat-label>
+    <input matInput placeholder="" formControlName="createdDate" type="text">
+  </mat-form-field>
   <mat-form-field class="order-50-width" appearance="outline">
     <mat-label>Bàn số</mat-label>
     <input matInput placeholder="" formControlName="table" type="number">
   </mat-form-field>
   <mat-form-field class="order-50-width"  [floatLabel]="always" appearance="outline">
-      <mat-label>Số người</mat-label>
-    <input matInput placeholder="" formControlName="pax">
-  </mat-form-field>
-    <div formArrayName="items" *ngFor="let item of items.controls, let i=index">
+    <mat-label>Số người</mat-label>
+  <input matInput placeholder="" formControlName="pax">
+</mat-form-field>
+   <div formArrayName="items" *ngFor="let item of items.controls, let i=index">
       <div [formGroupName]="i" class="itemrow">
       <mat-form-field class="order-50-width" appearance="outline">
         <mat-label>Bia</mat-label>
@@ -61,12 +65,11 @@
 </p>
 <button mat-raised-button color="primary" type="submit" [disabled]="!orderForm.valid">Lưu SP</button>
 <button mat-raised-button color="warn" [routerLink]="['/products']" type="button" (click)="cancel()">Quay về</button>
-<button mat-raised-button color="primary" type="button" (click)="printReceipt()" [disabled]="!orderForm.value.close">In receipt</button>
+<button mat-raised-button color="primary" type="button" (click)="printReceiptHTML()" [disabled]="!orderForm.value.close">In receipt</button>
 </form> 
-
+<!--
 <br>Dirty: {{ orderForm.dirty }}
 <br>Touched: {{ orderForm.touched }}
 <br>Valid: {{ orderForm.valid }}
 <br>Value: {{ orderForm.value | json }}
-<br>Street: {{ orderForm.get('0.street1')?.value }}
-
+<br>Street: {{ orderForm.get('0.street1')?.value }}-->
