--- a/src/app/inside/orders/orders-list/orders-list.component.html
+++ b/src/app/inside/orders/orders-list/orders-list.component.html
@@ -1,17 +1,13 @@
    
-    <p></p>
+    <p><a mat-flat-button color="warn" [routerLink]="['/inside/orders', 0, 'edit']">New Order</a></p>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <!-- ProductName Column -->
        <ng-container matColumnDef="createdDate">
          <th mat-header-cell *matHeaderCellDef>Created Date </th>
          <td mat-cell *matCellDef="let element">
-           <a [routerLink] = "['/inside/orders', element.id]">ID</a></td>
+           <a [routerLink] = "['/inside/orders', element.createdDate]">ID</a></td>
        </ng-container>
           
-       <ng-container matColumnDef="createdBy">
-         <th mat-header-cell *matHeaderCellDef> Created by </th>
-         <td mat-cell *matCellDef="let element"> {{element.createdBy}} </td>
-       </ng-container>
        
        <ng-container matColumnDef="table">
          <th mat-header-cell *matHeaderCellDef> Table</th>
@@ -31,8 +27,8 @@
        <ng-container matColumnDef="action">
          <th mat-header-cell *matHeaderCellDef></th>
          <td mat-cell *matCellDef="let element">
-             <a mat-stroked-button color="primary" [routerLink]="['/inside/orders', element.id, 'edit']">Edit</a>
-             <a mat-stroked-button color="warn" routerLink="." (click)="delete(element.id)">Delete</a>
+             <a mat-stroked-button color="primary" [routerLink]="['/inside/orders', element.createdDate, 'edit']">Edit</a>
+             <!--<a mat-stroked-button color="warn" routerLink="." (click)="delete(element.createdDate)">Delete</a>-->
            </td>
        </ng-container>
        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
